--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "json-server-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "json-server --watch db.json --port $PORT --host 0.0.0.0"
+    "start": "node server.js"
   },
   "dependencies": {
     "json-server": "^0.17.4"
   }
 }
+
