--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "json-server-backend",
+  "name": "server",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
     "json-server": "^0.17.4"
   }
 }
